[project]
name = "neo-downloader"
version = "2.5.0"
description = "Flask media downloader/player supporting 1000+ sites with god-mode speed, watermark removal and metadata erasure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0,<4.0",
    "yt-dlp>=2024.0,<2027.0",
    "requests>=2.31,<4.0",
    "Pillow>=10.0,<12.0",
    "gunicorn>=21.2,<24.0",
    "python-dotenv>=1.0,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neo"]

[tool.vercel]
entrypoint = "neo.wsgi:app"
